instalado font awesome e flexbox

--- a/exames.html
+++ b/exames.html
@@ -1,51 +1,71 @@
-<html>
+<html lang="pt-br">
   <head>
-    <!-- page's intelligence (metadata) -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Exames Médicos: Pesquise e compare</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:600&display=swap&subset=latin-ext" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/5a0db7db75.js" crossorigin="anonymous"></script>
+
     <!-- Stylesheet da page -->
     <link rel="stylesheet" href="style.css">
+
+    <title>Exames Médicos: Pesquise e compare</title>
   </head>
 
   <body>
     <!-- page's content -->
-    <nav>
-      <img id="logo_nav" src="images/logo_verde_com_icone.png" alt="">
+    <nav class="navbar navbar-light sticky-top">
+      <span class="navbar-brand"><img src="images/logo_verde_com_icone.png" height="60" alt="heali"></span>
     </nav>
 
-    <div class="banner">
+    <div id="banner">
       <h1>Pesquise e compare seus exames médicos</h1>
       <p>Nós fazemos o trabalho de pesquisa por você</p>
-      <p>
-        <a href="">Saiba Mais</a>
-      </p>
+      <button class="btn btn-lg" style="background-color: #F85A3E">
+        <a href="">Pesquise aqui</a>
+      </button>
     </div>
 
-    <div class="card">
-      <img class= "icon" src="images/location.png" alt="">
-      <h2>Pesquisa por localização</h2>
-      <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
-    </div>
+    <div class="containe">
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <img class= "icon" src="images/location.png" alt="">
+            <h2>Pesquisa por localização</h2>
+            <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
+          </div>
+        </div>
 
-    <div class="card">
-      <img class= "icon" src="images/exames.png" alt="">
-      <h2>Todos os exames</h2>
-      <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
-    </div class="card">
+        <div class="col">
+          <div class="card">
+            <img class= "icon" src="images/exames.png" alt="">
+            <h2>Todos os exames</h2>
+            <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
+          </div class="card">
+        </div>
 
-    <div>
-      <img class= "icon" src="images/laboratorio.png" alt="">
-      <h2>Maiores laboratórios</h2>
-      <p>Possuímos em nossa base os maiores e melhores laboratórios</p>
+        <div class="col">
+          <div class="card">
+            <img class= "icon" src="images/laboratorio.png" alt="">
+            <h2>Maiores laboratórios</h2>
+            <p>Possuímos em nossa base os maiores e melhores laboratórios</p>
+          </div>
+
+    </div>/div>
     </div>
 
     <div id="footer">
-      <p>Footer</p>
+      <i class="far fa-envelope"><a href="mailto:bru.cruz@gmail.com"></a></i>
+      <br>
+      <br>
+      <span>2019 - © Copyright Labi Exames</span>
     </div>
 
     <!-- Bootstrap JS -->
