--- a/exames.html
+++ b/exames.html
@@ -26,46 +26,51 @@
     </nav>
 
     <div id="banner">
-      <h1>Pesquise e compare seus exames médicos</h1>
-      <p>Nós fazemos o trabalho de pesquisa por você</p>
-      <button class="btn btn-lg" style="background-color: #F85A3E">
-        <a href="">Pesquise aqui</a>
-      </button>
+      <div class="col-bg-6 col-md-6 col-sm-12">
+        <h1>Pesquise e compare seus exames médicos</h1>
+        <p>Nós fazemos o trabalho de pesquisa por você</p>
+        <button class="btn btn-lg" style="background-color: #F85A3E">
+          <a href="">Pesquise aqui</a>
+        </button>
+      </div>
     </div>
 
-    <div class="containe">
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <img class= "icon" src="images/location.png" alt="">
-            <h2>Pesquisa por localização</h2>
-            <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
-          </div>
+    <div class="row">
+
+      <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
+        <div class="card">
+          <img class= "icon" src="images/location.png" alt="">
+          <h2>Pesquisa por localização</h2>
+          <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
         </div>
+      </div>
 
-        <div class="col">
-          <div class="card">
-            <img class= "icon" src="images/exames.png" alt="">
-            <h2>Todos os exames</h2>
-            <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
-          </div class="card">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
+        <div class="card">
+          <img class= "icon" src="images/exames.png" alt="">
+          <h2>Todos os exames</h2>
+          <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
+        </div class="card">
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
+        <div class="card">
+          <img class= "icon" src="images/laboratorio.png" alt="">
+          <h2>Maiores laboratórios</h2>
+          <p>Possuímos em nossa base os maiores e melhores laboratórios</p>
         </div>
+      </div>
 
-        <div class="col">
-          <div class="card">
-            <img class= "icon" src="images/laboratorio.png" alt="">
-            <h2>Maiores laboratórios</h2>
-            <p>Possuímos em nossa base os maiores e melhores laboratórios</p>
-          </div>
-
-    </div>/div>
     </div>
 
     <div id="footer">
-      <i class="far fa-envelope"><a href="mailto:bru.cruz@gmail.com"></a></i>
-      <br>
-      <br>
-      <span>2019 - © Copyright Labi Exames</span>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a class="far fa-envelope" href="mailto:bru.cruz@gmail.com"></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-facebook-f" href=""></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-instagram" href=""></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-twitter" href=""></a></i></li>
+      </ul>
+      <span>2019 - © copyright heali</span>
     </div>
 
     <!-- Bootstrap JS -->
