added link for typeform

--- a/exames.html
+++ b/exames.html
@@ -33,7 +33,7 @@
         <h1>Compare agora preços de exames médicos</h1>
         <p>Nós fazemos o trabalho de pesquisa por você</p>
         <button class="btn btn-lg" style="background-color: #F85A3E">
-          <a href="">Pedir cotação</a>
+          <a href="https://heali.typeform.com/to/Syb7t4">Pedir cotação</a>
         </button>
       </div>
     </div>
@@ -42,7 +42,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
-          <img class= "icon" src="images/location.png" alt="">
+          <img class= "icon" src="images/location.png" alt="Localização">
           <h2>Pesquisa por localização</h2>
           <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
         </div>
@@ -50,7 +50,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
-          <img class= "icon" src="images/exames.png" alt="">
+          <img class= "icon" src="images/exames.png" alt="Exames">
           <h2>Todos os exames</h2>
           <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
         </div class="card">
@@ -58,7 +58,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
-          <img class= "icon" src="images/laboratorio.png" alt="">
+          <img class= "icon" src="images/laboratorio.png" alt="Laboratórios">
           <h2>Maiores laboratórios</h2>
           <p>Possuímos em nossa base os maiores e melhores laboratórios</p>
         </div>
