--- a/exames.html
+++ b/exames.html
@@ -19,6 +19,10 @@
     <!-- Stylesheet da page -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- favicon -->
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
+
     <title>Exames Médicos: Pesquise e compare</title>
   </head>
 
