--- a/exames.html
+++ b/exames.html
@@ -22,6 +22,16 @@
     <!-- favicon -->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156427826-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156427826-1');
+    </script>
+
 
     <title>Exames Médicos: Pesquise e compare</title>
   </head>
