--- a/exames.html
+++ b/exames.html
@@ -32,11 +32,24 @@
       gtag('config', 'UA-156427826-1');
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MLXZ8FP');</script>
+    <!-- End Google Tag Manager -->
+
 
     <title>Exames Médicos: Pesquise e compare</title>
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MLXZ8FP"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- page's content -->
     <nav class="navbar navbar-light fixed-top">
       <span class="navbar-brand"><img src="images/logo_verde_com_icone.png" height="80" alt="heali"></span>
@@ -83,9 +96,8 @@
     <div id="footer">
       <ul class="list-inline">
         <li class="list-inline-item"><a class="far fa-envelope" href="mailto:bru.cruz@gmail.com"></a></i></li>
-        <li class="list-inline-item"><a class="fab fa-facebook-f" href=""></a></i></li>
-        <li class="list-inline-item"><a class="fab fa-instagram" href=""></a></i></li>
-        <li class="list-inline-item"><a class="fab fa-twitter" href=""></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-facebook-f" href="https://facebook.com/heali.br"></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-instagram" href="https://www.instagram.com/heali.br/"></a></i></li>
       </ul>
       <span>2019 - © copyright heali</span>
     </div>
