--- a/exames.html
+++ b/exames.html
@@ -95,9 +95,11 @@
 
     <div id="footer">
       <ul class="list-inline">
-        <li class="list-inline-item"><a class="far fa-envelope" href="mailto:bru.cruz@gmail.com"></a></i></li>
+        <li class="list-inline-item"><a class="far fa-envelope" href="mailto:bruno.cruz@heali.me"></a></i></li>
+        <li class="list-inline-item"><a class="fab fa-whatsapp" href="https://wa.me/5511991400572"></a></i></li>
         <li class="list-inline-item"><a class="fab fa-facebook-f" href="https://facebook.com/heali.br"></a></i></li>
         <li class="list-inline-item"><a class="fab fa-instagram" href="https://www.instagram.com/heali.br/"></a></i></li>
+
       </ul>
       <span>2019 - © copyright heali</span>
     </div>
