alterados: pag para typeform, incluido botao para blog, adicionado fluxo de pgto, adicionado agendamento, navbar diferente, design mais responsivo

--- a/exames.html
+++ b/exames.html
@@ -18,9 +18,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-     <!-- JS to change navbar when scrolling -->
-    <script type="text/javascript" src="scroll.js"></script>
-
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/5a0db7db75.js" crossorigin="anonymous"></script>
 
@@ -29,8 +26,6 @@
 
     <!-- favicon -->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
-
 
     <title>Exames Médicos: Pesquise e compare</title>
   </head>
@@ -51,7 +46,7 @@
         <h1>Compare agora preços de exames médicos</h1>
         <p>Nós fazemos o trabalho de pesquisa por você</p>
         <button class="btn btn-lg" style="background-color: #F85A3E">
-          <a href="https://heali.typeform.com/to/Syb7t4">Pedir cotação</a>
+          <a href="exames/orcamentos/index.html">Pedir cotação</a>
         </button>
       </div>
     </div>
