--- a/index - new.html
+++ b/index - new.html
@@ -42,30 +42,28 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="d-flex mb-2">
-          <div class="p-2">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Exames</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Consultas</a>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Cirurgias</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog/index.php">Blog</a>
-              </li>
-            </ul>
-          </div>
-          <div class="ml-auto p-2">
-            <form action="" class="form-inline my-2 my-lg-0 justify-content-end">
-              <button class="btn" style="background-color: #F85A3E">
-                <a href="exames/orcamentos/index.html">Pedir cotação</a>
-              </button>
-            </form>
-          </div>
+      <div class="collapse navbar-collapse d-flex mb-2" id="navbarNav">
+        <div class="p-2">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="exames.html">Exames</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Consultas</a>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Cirurgias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog/index.php">Blog</a>
+            </li>
+          </ul>
+        </div>
+        <div class="ml-auto p-2">
+          <form action="" class="form-inline my-2 my-lg-0 justify-content-end">
+            <button class="btn" style="background-color: #F85A3E">
+          <a href="exames/orcamentos/index.html">Pedir cotação</a>
+        </button>
+          </form>
         </div>
       </div>
     </nav>
@@ -80,88 +78,33 @@
       </div>
     </div>
 
-    <div style="height: 2.5vh"></div>
-
-    <div id="instrucoes">
-
-      <div class="row titulos-cards">
-        <h2>Como funciona?</h2>
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
-          <div class="card rounded-lg">
-            <img class= "icon" src="images/cadastro.png" alt="Localização">
-            <h3>Informe seu endereço e exames médicos</h3>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
-          <div class="card rounded-lg">
-            <img class= "icon" src="images/cotacao.png" alt="Exames">
-            <h3>A Heali buscará as melhores cotações para você</h3>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
-          <div class="card rounded-lg">
-            <img class= "icon" src="images/agendamento.png" alt="Laboratórios">
-            <h3>Escolha o melhor horário e opção de pagamento</h3>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row" style="justify-content: center">
-        <button class="btn btn-lg" style="background-color: #F85A3E">
-            <a href="exames/orcamentos/index.html">Pedir cotação</a>
-      </button>
-      </div>
-
-    </div>
-
-    <div style="height: 2.5vh"></div>
-
-    <div class="row titulos-cards">
-        <h2>O que oferecemos?</h2>
-    </div>
-
     <div class="row">
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
           <img class= "icon" src="images/location.png" alt="Localização">
           <h2>Pesquisa por localização</h2>
-          <p>Nós encontramos a melhor opção <strong>próxima ao endereço</strong> que você escolher</p>
+          <p>Nós encontramos a melhor opção próxima ao endereço que você escolher</p>
         </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
           <img class= "icon" src="images/exames.png" alt="Exames">
-          <h2>Acesso a dezenas de exames</h2>
-          <p>Organizamos mais de 3 mil preços de mais de <strong>50 exames</strong> diferentes</p>
+          <h2>Todos os exames</h2>
+          <p>Localizamos para você <strong>qualquer</strong> tipo de exame médico laboratorial</p>
         </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-4 col-bg-4">
         <div class="card rounded-lg">
           <img class= "icon" src="images/laboratorio.png" alt="Laboratórios">
-          <h2>Maiores laboratórios de SP</h2>
-          <p>Possuímos em nossa base, mais de <strong>150 laboratórios</strong> na Grande de São Paulo</p>
+          <h2>Maiores laboratórios</h2>
+          <p>Possuímos em nossa base os maiores e melhores laboratórios de São Paulo</p>
         </div>
       </div>
 
     </div>
-
-    <div class="row" style="justify-content: center">
-      <button class="btn btn-lg" style="background-color: #F85A3E">
-          <a href="exames/orcamentos/index.html">Pedir cotação</a>
-    </button>
-    </div>
-
-    <div style="height: 2.5vh"></div>
 
     <div id="footer">
       <ul class="list-inline">
@@ -169,10 +112,9 @@
         <li class="list-inline-item"><a class="fab fa-whatsapp" href="https://wa.me/5511991400572"></a></li>
         <li class="list-inline-item"><a class="fab fa-facebook-f" href="https://facebook.com/heali.br"></a></li>
         <li class="list-inline-item"><a class="fab fa-instagram" href="https://www.instagram.com/heali.br/"></a></li>
-        <li class="list-inline-item"><a class="fab fa-twitter" href="https://twitter.com/HealiMe"></a></li>
 
       </ul>
-      <span>2020 - © copyright heali</span>
+      <span>2019 - © copyright heali</span>
     </div>
 
     <!-- Bootstrap JS -->
