ajustado o subtitulo do h1

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="banner">
       <div class="col-bg-6 col-md-6 col-sm-12">
         <h1>Compare agora preços de exames médicos</h1>
-        <p>Nós fazemos o trabalho de pesquisa por você</p>
+        <p>A Heali te ajuda a cotar e agendar seus exames</p>
         <button class="btn btn-lg" style="background-color: #F85A3E">
           <a href="exames/orcamentos/index.html">Pedir cotação</a>
         </button>
